--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@
           <div class="row align-items-center">
             <div class="col-md-5 mb-3 mb-md-0">
               <img 
-                src="https://via.placeholder.com/700x400?text=Early+Days" 
+                src="early-days-of-the-company.jpg" 
                 alt="Early days of the company" 
                 class="img-fluid rounded shadow"
               >
@@ -149,7 +149,7 @@
           <div class="row align-items-center">
             <div class="col-md-5 mb-3 mb-md-0">
               <img 
-                src="https://via.placeholder.com/700x400?text=NVQ+Qualifications" 
+                src="NVQ-logo.png" 
                 alt="NVQ qualifications" 
                 class="img-fluid rounded shadow"
               >
@@ -168,7 +168,7 @@
           <div class="row align-items-center">
             <div class="col-md-5 mb-3 mb-md-0">
               <img 
-                src="https://via.placeholder.com/700x400?text=Expansion+Projects" 
+                src="expansion-projects.jpg" 
                 alt="Expansion projects" 
                 class="img-fluid rounded shadow"
               >
@@ -187,7 +187,7 @@
           <div class="row align-items-center flex-md-row-reverse">
             <div class="col-md-5 mb-3 mb-md-0">
               <img 
-                src="https://via.placeholder.com/700x400?text=Today" 
+                src="current-success.jpg" 
                 alt="Current success" 
                 class="img-fluid rounded shadow"
               >
