--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <div class="row align-items-center g-5">
         <div class="col-lg-6 text-center text-lg-start">
           <img 
-            src="https://via.placeholder.com/600x400.png?text=Luxurious+Carpets" 
+            src="luxury-carpet.jpg" 
             alt="Luxurious carpet example" 
             class="img-fluid rounded shadow"
           >
@@ -147,7 +147,7 @@
         <div class="col-md-6 col-lg-4">
           <div class="service-block p-4 text-center bg-white shadow-sm rounded">
             <img 
-              src="https://via.placeholder.com/400x300.png?text=Carpet+Fitting" 
+              src="carpet-fitting-1.jpg" 
               alt="Carpet Fitting" 
               class="img-fluid rounded mb-3"
             >
@@ -161,7 +161,7 @@
         <div class="col-md-6 col-lg-4">
           <div class="service-block p-4 text-center bg-white shadow-sm rounded">
             <img 
-              src="https://via.placeholder.com/400x300.png?text=Stair+Runners" 
+              src="stair-runners.jpg" 
               alt="Stair Runners" 
               class="img-fluid rounded mb-3"
             >
@@ -175,7 +175,7 @@
         <div class="col-md-6 col-lg-4">
           <div class="service-block p-4 text-center bg-white shadow-sm rounded">
             <img 
-              src="https://via.placeholder.com/400x300.png?text=Vinyl+Flooring" 
+              src="vinyl-flooring.jpg" 
               alt="Vinyl Flooring" 
               class="img-fluid rounded mb-3"
             >
@@ -258,7 +258,7 @@
         </div>
         <div class="col-lg-6">
           <img 
-            src="https://via.placeholder.com/600x400.png?text=Map+of+Coverage"
+            src="hertfordshire.jpg"
             alt="Coverage map" 
             class="img-fluid rounded shadow"
           >
