--- a/services.html
+++ b/services.html
@@ -135,7 +135,7 @@
       <div class="row align-items-center mb-5">
         <div class="col-md-6 pe-md-5 mb-4 mb-md-0">
           <img 
-            src="https://via.placeholder.com/800x500?text=Carpet+Fitting+Image" 
+            src="carpet-fitting-2.jpg" 
             alt="Carpet fitting example" 
             class="img-fluid rounded shadow"
           >
@@ -162,7 +162,7 @@
       <div class="row align-items-center mb-5 flex-md-row-reverse">
         <div class="col-md-6 ps-md-5 mb-4 mb-md-0">
           <img 
-            src="https://via.placeholder.com/800x500?text=Stair+Runner+Image" 
+            src="stair-runner-installation.jpg" 
             alt="Stair runner installation example" 
             class="img-fluid rounded shadow"
           >
@@ -189,7 +189,7 @@
       <div class="row align-items-center mb-5">
         <div class="col-md-6 pe-md-5 mb-4 mb-md-0">
           <img 
-            src="https://via.placeholder.com/800x500?text=Vinyl+Flooring+Image" 
+            src="vinyl-flooring-2.jpg" 
             alt="Vinyl flooring example" 
             class="img-fluid rounded shadow"
           >
@@ -216,7 +216,7 @@
       <div class="row align-items-center mb-5 flex-md-row-reverse">
         <div class="col-md-6 ps-md-5 mb-4 mb-md-0">
           <img 
-            src="https://via.placeholder.com/800x500?text=Custom+Mats+Image" 
+            src="custom-mat-whipping.jpg" 
             alt="Custom mat whipping example" 
             class="img-fluid rounded shadow"
           >
@@ -257,28 +257,28 @@
         <!-- Replace with real images -->
         <div class="col-sm-6 col-lg-3">
           <img 
-            src="https://via.placeholder.com/400x400?text=Project+1"
+            src="completed-project-1.jpg"
             alt="Completed Project 1" 
             class="img-fluid rounded shadow"
           >
         </div>
         <div class="col-sm-6 col-lg-3">
           <img 
-            src="https://via.placeholder.com/400x400?text=Project+2"
+            src="completed-project-2.jpg"
             alt="Completed Project 2" 
             class="img-fluid rounded shadow"
           >
         </div>
         <div class="col-sm-6 col-lg-3">
           <img 
-            src="https://via.placeholder.com/400x400?text=Project+3"
+            src="completed-project-3.jpg"
             alt="Completed Project 3" 
             class="img-fluid rounded shadow"
           >
         </div>
         <div class="col-sm-6 col-lg-3">
           <img 
-            src="https://via.placeholder.com/400x400?text=Project+4"
+            src="completed-project-4.jpg"
             alt="Completed Project 4" 
             class="img-fluid rounded shadow"
           >
