--- a/services.html
+++ b/services.html
@@ -8,15 +8,15 @@
   <link 
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
     crossorigin="anonymous"
   >
-
-  <!-- Custom CSS for Services Page -->
+  <!-- Global Styles -->
+  <link rel="stylesheet" href="styles.css" />
+  <!-- Services Page Styles -->
   <link rel="stylesheet" href="services.css" />
 
-  <!-- SEO Meta Tags -->
-  <title>Professional Carpet Fitting & Stair Runner Services | Hertfordshire</title>
+  <title>Professional Carpet Fitting &amp; Stair Runner Services | Hertfordshire</title>
   <meta 
     name="description" 
     content="Explore Soft Touch Carpets & Elegant Edges for carpet fitting near you, stair runner installation, vinyl flooring, and custom mat services. Over 40 years of expertise in Hertfordshire." 
@@ -34,7 +34,7 @@
     rel="stylesheet"
   >
 
-  <!-- Optional Schema Markup -->
+  <!-- Optional Schema Markup (LocalBusiness) -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -56,6 +56,7 @@
   </script>
 </head>
 <body>
+
   <!-- NAVBAR -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-brown sticky-top shadow">
     <div class="container">
@@ -113,8 +114,13 @@
     </div>
   </header>
 
-  <!-- SERVICES INTRO SECTION -->
-  <section class="py-5 bg-cream">
+  <!-- INTRO SECTION (WAVE DIVIDER TOP) -->
+  <div class="wave-divider wave-top">
+    <svg viewBox="0 0 500 50" preserveAspectRatio="none">
+      <path d="M0,0 C150,50 350,0 500,50 L500,00 L0,0 Z" style="fill:#FFFDF9;"></path>
+    </svg>
+  </div>
+  <section class="services-intro-section py-5 bg-cream">
     <div class="container">
       <div class="row text-center mb-5">
         <div class="col-lg-8 mx-auto">
@@ -129,9 +135,19 @@
           </p>
         </div>
       </div>
+    </div>
+  </section>
 
-      <!-- ALTERNATING SERVICE ROWS -->
-      <!-- CARPET FITTING -->
+  <!-- WAVE DIVIDER BOTTOM -->
+  <div class="wave-divider wave-bottom">
+    <svg viewBox="0 0 500 50" preserveAspectRatio="none">
+      <path d="M0,50 C150,0 350,50 500,0 L500,50 L0,50 Z" style="fill:#FFFDF9;"></path>
+    </svg>
+  </div>
+
+  <!-- SERVICE SECTION: CARPET FITTING -->
+  <section class="py-5 bg-light">
+    <div class="container">
       <div class="row align-items-center mb-5">
         <div class="col-md-6 pe-md-5 mb-4 mb-md-0">
           <img 
@@ -157,8 +173,17 @@
           </a>
         </div>
       </div>
+    </div>
+  </section>
 
-      <!-- STAIR RUNNER INSTALLATION -->
+  <!-- SERVICE SECTION: STAIR RUNNERS (WAVE DIVIDER TOP) -->
+  <div class="wave-divider wave-top">
+    <svg viewBox="0 0 500 50" preserveAspectRatio="none">
+      <path d="M0,0 C150,50 350,0 500,50 L500,00 L0,0 Z" style="fill:#FFFDF9;"></path>
+    </svg>
+  </div>
+  <section class="py-5 bg-cream">
+    <div class="container">
       <div class="row align-items-center mb-5 flex-md-row-reverse">
         <div class="col-md-6 ps-md-5 mb-4 mb-md-0">
           <img 
@@ -184,8 +209,17 @@
           </a>
         </div>
       </div>
+    </div>
+  </section>
 
-      <!-- VINYL FLOORING -->
+  <!-- SERVICE SECTION: VINYL FLOORING (WAVE DIVIDER BOTTOM) -->
+  <div class="wave-divider wave-bottom">
+    <svg viewBox="0 0 500 50" preserveAspectRatio="none">
+      <path d="M0,50 C150,0 350,50 500,0 L500,50 L0,50 Z" style="fill:#FFFDF9;"></path>
+    </svg>
+  </div>
+  <section class="py-5 bg-light">
+    <div class="container">
       <div class="row align-items-center mb-5">
         <div class="col-md-6 pe-md-5 mb-4 mb-md-0">
           <img 
@@ -211,8 +245,17 @@
           </a>
         </div>
       </div>
+    </div>
+  </section>
 
-      <!-- CUSTOM MATS & WHIPPING -->
+  <!-- SERVICE SECTION: CUSTOM MATS & WHIPPING (WAVE DIVIDER TOP) -->
+  <div class="wave-divider wave-top">
+    <svg viewBox="0 0 500 50" preserveAspectRatio="none">
+      <path d="M0,0 C150,50 350,0 500,50 L500,00 L0,0 Z" style="fill:#FFFDF9;"></path>
+    </svg>
+  </div>
+  <section class="py-5 bg-cream">
+    <div class="container">
       <div class="row align-items-center mb-5 flex-md-row-reverse">
         <div class="col-md-6 ps-md-5 mb-4 mb-md-0">
           <img 
@@ -241,12 +284,17 @@
     </div>
   </section>
 
-  <!-- PORTFOLIO / GALLERY SECTION -->
+  <!-- PORTFOLIO / GALLERY SECTION (WAVE DIVIDER BOTTOM) -->
+  <div class="wave-divider wave-bottom">
+    <svg viewBox="0 0 500 50" preserveAspectRatio="none">
+      <path d="M0,50 C150,0 350,50 500,0 L500,50 L0,50 Z" style="fill:#FFFDF9;"></path>
+    </svg>
+  </div>
   <section class="py-5 bg-light">
     <div class="container">
       <div class="row mb-5 text-center">
         <div class="col-lg-8 mx-auto">
-          <h2 class="section-heading" style="font-family: 'Playfair Display', serif;">Our Recent Projects</h2>
+          <h2 class="section-heading">Our Recent Projects</h2>
           <p class="fs-5">
             Take a look at our latest transformations—from cosy living rooms to grand staircases. 
             Each project illustrates our meticulous attention to detail and dedication to customer satisfaction.
@@ -287,12 +335,17 @@
     </div>
   </section>
 
-  <!-- TESTIMONIALS / CAROUSEL -->
+  <!-- TESTIMONIALS / CAROUSEL (WAVE DIVIDER TOP) -->
+  <div class="wave-divider wave-top">
+    <svg viewBox="0 0 500 50" preserveAspectRatio="none">
+      <path d="M0,0 C150,50 350,0 500,50 L500,00 L0,0 Z" style="fill:#FFFDF9;"></path>
+    </svg>
+  </div>
   <section class="py-5 bg-cream">
     <div class="container">
       <div class="row mb-4 text-center">
         <div class="col-lg-8 mx-auto">
-          <h2 class="section-heading" style="font-family: 'Playfair Display', serif;">Our Happy Clients</h2>
+          <h2 class="section-heading">Our Happy Clients</h2>
           <p class="fs-5">
             See what our customers have to say about the quality of our work, 
             from carpet fitting to bespoke stair runners.
@@ -353,12 +406,17 @@
     </div>
   </section>
 
-  <!-- FAQ SECTION -->
+  <!-- FAQ SECTION (WAVE DIVIDER BOTTOM) -->
+  <div class="wave-divider wave-bottom">
+    <svg viewBox="0 0 500 50" preserveAspectRatio="none">
+      <path d="M0,50 C150,0 350,50 500,0 L500,50 L0,50 Z" style="fill:#FFFDF9;"></path>
+    </svg>
+  </div>
   <section class="py-5 bg-light">
     <div class="container">
       <div class="row mb-4 text-center">
         <div class="col-lg-8 mx-auto">
-          <h2 class="section-heading" style="font-family: 'Playfair Display', serif;">Frequently Asked Questions</h2>
+          <h2 class="section-heading">Frequently Asked Questions</h2>
           <p class="fs-5">
             Have queries about carpet fitting, costs, or maintenance? We’re here to help. 
             If you don’t see your question below, <a href="contact.html">contact us</a> for more info.
@@ -373,20 +431,20 @@
             <div class="accordion-item mb-2">
               <h2 class="accordion-header" id="faqOne">
                 <button 
-                  class="accordion-button collapsed" 
-                  type="button" 
-                  data-bs-toggle="collapse" 
-                  data-bs-target="#collapseOne" 
-                  aria-expanded="false" 
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseOne"
+                  aria-expanded="false"
                   aria-controls="collapseOne"
                 >
                   How much does carpet fitting cost?
                 </button>
               </h2>
-              <div 
-                id="collapseOne" 
-                class="accordion-collapse collapse" 
-                aria-labelledby="faqOne" 
+              <div
+                id="collapseOne"
+                class="accordion-collapse collapse"
+                aria-labelledby="faqOne"
                 data-bs-parent="#faqAccordion"
               >
                 <div class="accordion-body">
@@ -403,27 +461,27 @@
             <div class="accordion-item mb-2">
               <h2 class="accordion-header" id="faqTwo">
                 <button 
-                  class="accordion-button collapsed" 
-                  type="button" 
-                  data-bs-toggle="collapse" 
-                  data-bs-target="#collapseTwo" 
-                  aria-expanded="false" 
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseTwo"
+                  aria-expanded="false"
                   aria-controls="collapseTwo"
                 >
                   Do you serve areas outside Hertfordshire?
                 </button>
               </h2>
-              <div 
-                id="collapseTwo" 
-                class="accordion-collapse collapse" 
-                aria-labelledby="faqTwo" 
+              <div
+                id="collapseTwo"
+                class="accordion-collapse collapse"
+                aria-labelledby="faqTwo"
                 data-bs-parent="#faqAccordion"
               >
                 <div class="accordion-body">
                   <p>
-                    Yes! We typically serve Hatfield, Welwyn Garden City, St Albans, 
-                    Cheshunt, Harpenden, and other nearby areas within a 20–40 mile radius. 
-                    For larger projects, we're willing to travel slightly further. 
+                    Yes! We typically serve Hatfield, Welwyn Garden City, St Albans,
+                    Cheshunt, Harpenden, and other nearby areas within a 20–40 mile radius.
+                    For larger projects, we're willing to travel slightly further.
                     Just <a href="contact.html">get in touch</a> to discuss your location.
                   </p>
                 </div>
@@ -462,9 +520,9 @@
   </footer>
 
   <!-- Bootstrap JS Bundle -->
-  <script 
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"
   ></script>
 </body>
