--- a/services.html
+++ b/services.html
@@ -205,13 +205,23 @@
   <section class="py-5" style="background-color: var(--tan); color: #fff;">
     <div class="container">
       <div class="row align-items-center mb-5 flex-md-row-reverse">
-        <div class="col-md-6 ps-md-5 mb-4 mb-md-0">
+        <div class="col-md-6 col-lg-3  mb-4 mb-md-0">
           <img 
-            src="custom-mat-whipping.jpg" 
+            src="carpet-whipping.jpg" 
             alt="Custom mat whipping example" 
             class="img-fluid rounded shadow"
+            style="max-height:500px;"
           >
         </div>
+        <div class="d-none d-lg-flex col-lg-3 mb-4 mb-md-0">
+          <img 
+            src="carpet-whipping-2.jpg" 
+            alt="Custom mat whipping example" 
+            class="img-fluid rounded shadow"
+            style="max-height:500px;"
+          >
+        </div>
+    
         <div class="col-md-6">
           <h3 style="font-family: 'Montserrat', sans-serif;">
             Custom Mats &amp; Whipping
