--- a/about.html
+++ b/about.html
@@ -42,6 +42,7 @@
     href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700;900&family=Montserrat:wght@400;700&family=Nunito:wght@300;400;700&display=swap"
     rel="stylesheet"
   />
+  <link rel="icon" type="image/png" href="STCEE.png">
 
   <!-- Optional Schema Markup (LocalBusiness) -->
   <script type="application/ld+json">
@@ -59,7 +60,7 @@
       "postalCode": "AL10 0AL",
       "addressCountry": "GB"
     },
-    "url": "https://your-domain.com/about.html"
+    "url": "https://softtouchcarpets.uk/about.html"
   }
   </script>
 </head>
