--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700;900&family=Montserrat:wght@400;700&family=Nunito:wght@300;400;700&display=swap" 
     rel="stylesheet"
   >
-
+  <link rel="icon" type="image/png" href="STCEE.png">
   <!-- Optional Schema Markup (LocalBusiness) -->
   <script type="application/ld+json">
   {
@@ -52,7 +52,7 @@
       "postalCode": "AL10 0AL",
       "addressCountry": "GB"
     },
-    "url": "https://your-domain.com"
+    "url": "https://softtouchcarpets.uk/"
   }
   </script>
 </head>
