--- a/services.html
+++ b/services.html
@@ -33,7 +33,7 @@
     href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700;900&family=Montserrat:wght@400;700&family=Nunito:wght@300;400;700&display=swap"
     rel="stylesheet"
   >
-
+  <link rel="icon" type="image/png" href="STCEE.png">
   <!-- Optional Schema Markup (LocalBusiness) -->
   <script type="application/ld+json">
   {
@@ -50,8 +50,8 @@
       "postalCode": "AL10 0AL",
       "addressCountry": "GB"
     },
-    "image": "https://your-domain.com/your-hero-image.jpg",
-    "url": "https://your-domain.com/services.html"
+    "image": "https://softtouchcarpets.uk/stair-runners.jpg",
+    "url": "https://softtouchcarpets.uk/services.html"
   }
   </script>
 </head>
