--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
     crossorigin="anonymous"
   >
-
+  <link rel="icon" type="image/png" href="STCEE.png">
   <!-- Page-Specific Styles -->
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="contact.css" />
