--- a/contact.html
+++ b/contact.html
@@ -105,6 +105,15 @@
       });
     });
   </script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-E79KBQZBRK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-E79KBQZBRK');
+</script>
 </head>
 <body>
   <!-- COOKIE BANNER -->
